--- a/News
+++ b/News
@@ -1,10 +1,8 @@
 {
-    "Main" : "Новости теперь синхронизируються по инфронету!",
+    "Main" : "Возможная поддержка InfroRusNet на Nokia ― Vokia Corporation",
     "News" :
     {
-        "WorldInOneApp" : ["ХИИ Гелееее - самый популярный мем!", "Возможная поддержка Infronet на Nokia ― Vokia Corporation"],
+        "WorldInOneApp" : ["ХИИ Гелееее - самый популярный мем!", "BigSmoke вернулся!!!", "بي بي سي العربية هي شبكة لنقل الأخبار والمعلومات ومقاطع الفيديو إلى العالم عبر عدة وسائط، تشمل الإنترنت "],
         "School35" : ["В мужском туалете пахнет вкусным мылом! :)"],
     }
 }
-
-
