--- a/News
+++ b/News
@@ -3,6 +3,7 @@
     "News" :
     {
         "WorldInOneApp" : ["ХИИ Гелееее - самый популярный мем!", "BigSmoke вернулся!!!", "بي بي سي العربية هي شبكة لنقل الأخبار والمعلومات ومقاطع الفيديو إلى العالم عبر عدة وسائط، تشمل الإنترنت "],
-        "School35" : ["В мужском туалете пахнет вкусным мылом! :)"],
+        "School35" : ["В мужском туалете пахнет крутым мылом! :)", "Все Пацаны ждут пожарку 17 февраля!"],
     }
 }
+
