--- a/News
+++ b/News
@@ -1,11 +1,12 @@
 {
-    "Main" : "Возможная поддержка InfroRusNet на Nokia ― Vokia Corporation",
+    "Main" : "Обновление InfroRusNet 2024 сохранилось на главном сервере!",
     "News" :
     {
         "WorldInOneApp" : ["ХИИ Гелееее - самый популярный мем!", "BigSmoke вернулся!!!", "بي بي سي العربية هي شبكة لنقل الأخبار والمعلومات ومقاطع الفيديو إلى العالم عبر عدة وسائط، تشمل الإنترنت "],
-        "School35" : ["В мужском туалете пахнет крутым мылом! :)", "Все Пацаны ждут пожарку 17 февраля!"],
-        "TuxLinux" : ["чё за Crazy Dream :3"]
+        "School35" : ["Гравный разработчик Infronet - Нигга :)", "На этой неделе в школу будет приходить спецназ"],
+        "TuxLinux" : ["Нокиа 3310 пытались раз**бать, но ничего не вышло :3"]
     }
 }
+
 
 
