--- a/News
+++ b/News
@@ -3,10 +3,10 @@
     "News" :
     {
         "WorldInOneApp" : ["ХИИ Гелееее - самый популярный мем!", "BigSmoke вернулся!!!", "بي بي سي العربية هي شبكة لنقل الأخبار والمعلومات ومقاطع الفيديو إلى العالم عبر عدة وسائط، تشمل الإنترنت "],
-        "School35" : ["Гравный разработчик Infronet - Нигга :)", "На этой неделе в школу будет приходить спецназ"],
-        "TuxLinux" : ["Нокиа 3310 пытались раз**бать, но ничего не вышло :3"]
+        "School35" : ["Гравный разработчик Infronet - Нигга :)", "На этой неделе в школу будет приходить спецназ"]
     }
 }
+
 
 
 
